docs-archive/apache-airflow-providers-trino/6.1.2/_sources/_api/airflow/providers/trino/hooks/trino/index.rst.txt
airflow.providers.trino.hooks.trino
===================================

.. py:module:: airflow.providers.trino.hooks.trino


Attributes
----------

.. autoapisummary::

   airflow.providers.trino.hooks.trino.T


Exceptions
----------

.. autoapisummary::

   airflow.providers.trino.hooks.trino.TrinoException


Classes
-------

.. autoapisummary::

   airflow.providers.trino.hooks.trino.TrinoHook


Functions
---------

.. autoapisummary::

   airflow.providers.trino.hooks.trino.generate_trino_client_info


Module Contents
---------------

.. py:data:: T

.. py:function:: generate_trino_client_info()

   Return json string with dag_id, task_id, logical_date and try_number.


.. py:exception:: TrinoException

   Bases: :py:obj:`Exception`


   Trino exception.


.. py:class:: TrinoHook(*args, **kwargs)

   Bases: :py:obj:`airflow.providers.common.sql.hooks.sql.DbApiHook`


   Interact with Trino through trino package.

   >>> ph = TrinoHook()
   >>> sql = "SELECT count(1) AS num FROM airflow.static_babynames"
   >>> ph.get_records(sql)
   [[340698]]


   .. py:attribute:: conn_name_attr
      :value: 'trino_conn_id'



   .. py:attribute:: default_conn_name
      :value: 'trino_default'



   .. py:attribute:: conn_type
      :value: 'trino'



   .. py:attribute:: hook_name
      :value: 'Trino'



   .. py:attribute:: strip_semicolon
      :value: True



   .. py:attribute:: query_id
      :value: ''



   .. py:method:: get_ui_field_behaviour()
      :classmethod:


      Return custom field behaviour.



   .. py:method:: get_conn()

      Return a connection object.



   .. py:method:: get_isolation_level()

      Return an isolation level.



   .. py:method:: get_records(sql = '', parameters = None)

      Execute the sql and return a set of records.

      :param sql: the sql statement to be executed (str) or a list of sql statements to execute
      :param parameters: The parameters to render the SQL query with.



   .. py:method:: get_first(sql = '', parameters = None)

      Execute the sql and return the first resulting row.

      :param sql: the sql statement to be executed (str) or a list of sql statements to execute
      :param parameters: The parameters to render the SQL query with.



   .. py:method:: get_pandas_df(sql = '', parameters = None, **kwargs)

      Execute the sql and returns a pandas dataframe.

      :param sql: the sql statement to be executed (str) or a list of sql statements to execute
      :param parameters: The parameters to render the SQL query with.
      :param kwargs: (optional) passed into pandas.io.sql.read_sql method



   .. py:method:: insert_rows(table, rows, target_fields = None, commit_every = 0, replace = False, **kwargs)

      Insert a set of tuples into a table in a generic way.

      :param table: Name of the target table
      :param rows: The rows to insert into the table
      :param target_fields: The names of the columns to fill in the table
      :param commit_every: The maximum number of rows to insert in one
          transaction. Set to 0 to insert all rows in one transaction.
      :param replace: Whether to replace instead of insert



   .. py:method:: get_openlineage_database_info(connection)

      Return Trino specific information for OpenLineage.



   .. py:method:: get_openlineage_database_dialect(_)

      Return Trino dialect.



   .. py:method:: get_openlineage_default_schema()

      Return Trino default schema.



   .. py:method:: get_uri()

      Return the Trino URI for the connection.



